[package]
name = "ross-ulbricht-freedom-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
env_logger = "0.11.6"
log = "0.4.25"
nostr-sdk = "0.38.0"
interim = { version = "0.2.0", features = ["chrono_0_4", "time_0_3"] }
chrono = "0.4.39"
time = "0.3.37"

[dev-dependencies]
test-log = "*"
